TestSuite/PascalABCTests/errors/err0246.pas
begin
  var i := 1;
  case i of;
  1:Write(2);
  else Print(666)
  end
end.